WIP: monochrome build

--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -122,7 +122,7 @@ During this Castle campaign Scenario, the following rules apply:
   \item Your Hero's maximum Level is 6.
   \item All buildings are unavailable, building is not possible.
   \item All neutral enemies fight using the Neutral Enemy Deck.
-  \item Each time you visit a Trading Post, draw the top Cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
+  \item Each time you visit a Trading Post, draw the top Cards from the \bronze\ bronze, \silver\ silver, and \golden\ golden neutral enemy Decks.
     You may recruit any, or all of them by paying their cost.
     Shuffle any un-hired ones back into their Decks.
   \item The Grail may be sold at a trading post for 30 \svgunit{gold} \textit{or} \textbf{Search (3)} the relic Deck, twice.
