--- a/campaigns/castle_two_knights_defense.tex
+++ b/campaigns/castle_two_knights_defense.tex
@@ -25,7 +25,7 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Starting Units:} The army you ended Scenario 2 with
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, Citadel
+\textbf{Town Buildings:} \bronze\ Dwelling, \silver\ Dwelling, Citadel
 
 \textbf{Bonus:} Begin the Scenario at Hero Level 3, but do not take new Ability Cards.
 
@@ -107,11 +107,11 @@ During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
   \item The Glory of Erathia building is unavailable.
-  \item Each time you visit a Trading Post, draw the top Cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
+  \item Each time you visit a Trading Post, draw the top Cards from the \bronze\ bronze, \silver\ silver, and \golden\ golden neutral enemy Decks.
   You may recruit any, or all of them by paying their cost.
   Shuffle any un-hired ones back into their Decks.
 
-  \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \svgunit{azure} Azure neutral Deck to your army.
+  \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \azure\ Azure neutral Deck to your army.
   \item The enemy army follows the normal AI movement rules, stopping to capture Settlements and Mines, with its ultimate goal to reach the Dragon Utopia.
   \item If the enemy army reaches the Dragon Utopia before you do, flip the Pack side of Dread Knights to Few and add a Pack of Ghost Dragons.
 \end{itemize}
