--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -37,7 +37,7 @@ This Scenario plays out over 13 Rounds.
   \item A Few Magogs
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling, City Hall
+\textbf{Town Buildings:} \bronze\ Dwelling, City Hall
 
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
