--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -34,7 +34,7 @@ This Scenario plays out over 16 Rounds.
   \item A Pack of Familiars
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling
+\textbf{Town Buildings:} \bronze\ Dwelling, \silver\ Dwelling
 
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
