--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -27,10 +27,10 @@ This Scenario is played over a maximum of 11 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × A Few \svgunit{bronze} Units with the lowest Recruitment cost
+  \item 2 × A Few \bronze\ Units with the lowest Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling
+\textbf{Town Buildings:} \bronze\ Dwelling
 
 \textbf{Map Tile Pool:} None
 
@@ -75,7 +75,7 @@ During this Scenario:
       \item Place the Main Hero when defeated.
       \item Temporarily transport the army to, for 8 \svg{gold}, when the Random Town is attacked.
     \end{itemize}
-  \item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws Cards from the Neutral Units \svgunit{azure} Deck until a Dragon not associated with any Faction is drawn.
+  \item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws Cards from the Neutral Units \azure\ Deck until a Dragon not associated with any Faction is drawn.
     The player may immediately Recruit that Dragon for free.
 \end{itemize}
 
