--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -24,10 +24,10 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × Few \svgunit{bronze} Units with the \textit{highest} Recruitment cost
+  \item 2 × Few \bronze\ Units with the \textit{highest} Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling
+\textbf{Town Buildings:} \bronze\ Dwelling
 
 \textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile
 
@@ -79,10 +79,10 @@ During this Scenario:
   \item A player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.
   \item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:
   \begin{itemize}
-    \item \textbf{Easy:} 1 × \svgunit{azure}, 2 × \svgunit{silver}, 1 × \svgunit{bronze}
-    \item \textbf{Normal:} 1 × \svgunit{azure}, 1 × \svgunit{golden}, 2 × \svgunit{silver}
-    \item \textbf{Hard:} 1 × \svgunit{azure}, 3 × \svgunit{golden}
-    \item \textbf{Impossible:}  2 × \svgunit{azure}, 2 × \svgunit{golden}
+    \item \textbf{Easy:} 1 × \azure\, 2 × \silver\, 1 × \bronze\
+    \item \textbf{Normal:} 1 × \azure\, 1 × \golden\, 2 × \silver\
+    \item \textbf{Hard:} 1 × \azure\, 3 × \golden\
+    \item \textbf{Impossible:}  2 × \azure\, 2 × \golden\
   \end{itemize}
   \item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:
   \begin{itemize}
