--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -37,7 +37,7 @@ This Scenario plays out over 13 Rounds.
 
 \textbf{Starting Units:} A Few Centaurs, a Few Dwarves, a Pack of Elves, a Few Pegasi
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, Mystic Pond
+\textbf{Town Buildings:} \bronze\ Dwelling, \silver\ Dwelling, Mystic Pond
 
 \columnbreak
 \textbf{Bonus:}
