--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -20,13 +20,13 @@ This Scenario plays out over 13 Rounds
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 1 × Few \svgunit{bronze} Units of the highest recruitment cost
-  \item 1 × Pack \svgunit{bronze} Units of the lowest recruitment cost
+  \item 1 × Few \bronze\ Units of the highest recruitment cost
+  \item 1 × Pack \bronze\ Units of the lowest recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \svgunit{bronze} Dwelling
+  \item \bronze\ Dwelling
   \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 \end{itemize}
 
@@ -99,7 +99,7 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
     \item Search (2) \svg{spellpower} twice
     \item Search (2) \svg{artifact} twice
   \end{itemize}
-  \item Dragon Utopias are guarded by 2 \svgunit{azure}-tier dragons and 2 \svgunit{golden}-tier dragons.
+  \item Dragon Utopias are guarded by 2 \azure\-tier dragons and 2 \golden\-tier dragons.
   \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
     \item Recruit one of the defeated Dragons for half its \svg{gold} (rounded down) and its \svg{valuables} cost.
@@ -116,7 +116,7 @@ After visiting a Dragon Utopia, roll an Attack Die:
 \subsection*{\MakeUppercase{Suggested Houserules}}
 \begin{itemize}
   \item \href{https://boardgamegeek.com/thread/3445901/custom-hex-combat-board}{Compact Battlefield}.
-  \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Stacking more than Pack} - Start with Several \svgunit{bronze} Units instead of Few.
+  \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Stacking more than Pack} - Start with Several \bronze\ Units instead of Few.
 \end{itemize}
 
 \vspace*{\fill}
