--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -23,11 +23,11 @@ This Scenario is played over 13 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svgunit{bronze} Units with the hightst Recruitment cost
-  \item A Few \svgunit{silver} Units with the lowest Recruitment cost
+  \item A Pack of \bronze\ Units with the hightst Recruitment cost
+  \item A Few \silver\ Units with the lowest Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling
+\textbf{Town Buildings:} \bronze\ Dwelling
 
 \textbf{Map Tile Pool:} Each player takes 3 Far (II--III) Map Tiles with at least one Settlement.
 
