--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -23,11 +23,11 @@ This Scenario is played over 8 Rounds, with up to 4 additional tie-breaking Roun
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 2 × A Few \svgunit{bronze} Units with the lowest Recruitment cost
-  \item A Few \svgunit{silver} Units with the lowest Recruitment cost
+  \item 2 × A Few \bronze\ Units with the lowest Recruitment cost
+  \item A Few \silver\ Units with the lowest Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, Citadel, Mage Guild
+\textbf{Town Buildings:} \bronze\ Dwelling, \silver\ Dwelling, Citadel, Mage Guild
 
 \textbf{Map Tile Pool:} None
 
