--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -23,13 +23,13 @@ This Scenario plays out over ... Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svgunit{bronze}...
-  \item A Pack \svgunit{silver}...
-  \item \svgunit{golden}
+  \item A Few \bronze\...
+  \item A Pack \silver\...
+  \item \golden\
   \item \svg{azure}
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling...
+\textbf{Town Buildings:} \bronze\ Dwelling...
 
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
