--- a/templates/default.tex
+++ b/templates/default.tex
@@ -23,13 +23,13 @@ This Scenario is played over ... Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svgunit{bronze}...
-  \item A Pack \svgunit{silver}...
-  \item \svgunit{golden}
-  \item \svgunit{azure}
+  \item A Few \bronze\...
+  \item A Pack \silver\...
+  \item \golden\
+  \item \azure\
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling...
+\textbf{Town Buildings:} \bronze\ Dwelling...
 
 \textbf{Map Tile Pool:} Each player takes X [random] Near/Far Map (A--B) Tiles...
 
