--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -38,7 +38,7 @@ This Scenario plays out over 14 Rounds.
   \item A Pack of Cerebri
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, City Hall, Citadel
+\textbf{Town Buildings:} \bronze\ Dwelling, \silver\ Dwelling, City Hall, Citadel
 
 \textbf{Bonus:} Gain a War Machine of your choice.
 
