--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -24,11 +24,11 @@ This Scenario is played over 8 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svgunit{bronze} Units of your choice
-  \item A Few \svgunit{bronze} Units of your choice
+  \item A Pack of \bronze\ Units of your choice
+  \item A Few \bronze\ Units of your choice
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling
+\textbf{Town Buildings:} \bronze\ Dwelling
 
 \textbf{Map Tile Pool:} If you wish, you can distribute the II--III Tiles equally to each player rather than laying them out as proposed.
 
@@ -63,7 +63,7 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
 \begin{itemize}
     \item Ignore any yellow lines between Tiles I (but not between Tiles I and Tiles II--III).
 
-    \item You can't build a \svgunit{golden} Dwelling.
+    \item You can't build a \golden\ Dwelling.
 
     \item You can give Units to another player, even outside your Turn, if one of your Heroes is:
     \begin{itemize}
@@ -76,7 +76,7 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
 
     \item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.
 
-    \item For the last Mine/Settlement battle, add a \svgunit{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!
+    \item For the last Mine/Settlement battle, add a \golden\ Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!
 
     \item The first time you reach Level IV, gain your second specialty.
 
