--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -26,11 +26,11 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svgunit{bronze} Units with the \textit{lowest} Recruitment cost
-  \item A Few \svgunit{bronze} Units with the \textit{highest} Recruitment cost
+  \item A Pack of \bronze\ Units with the \textit{lowest} Recruitment cost
+  \item A Few \bronze\ Units with the \textit{highest} Recruitment cost
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling, Citadel
+\textbf{Town Buildings:} \bronze\ Dwelling, Citadel
 
 \textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.
 
@@ -158,10 +158,14 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \textbf{Strength of Enemy Armies}\\
   \bigskip
 
-  \newcommand{\bronze}[0]{\svgunit[12]{bronze}}
-  \newcommand{\silver}[0]{\svgunit[12]{silver}}
-  \newcommand{\golden}[0]{\svgunit[12]{golden}}
-  \newcommand{\azure}[0]{\svgunit[12]{azure}}
+  \let\origbronze\bronze
+  \let\origsilver\silver
+  \let\origgolden\golden
+  \let\origazure\azure
+  \renewcommand{\bronze}{\origbronze[12]}
+  \renewcommand{\silver}{\origsilver[12]}
+  \renewcommand{\golden}{\origgolden[12]}
+  \renewcommand{\azure}{\origazure[12]}
 
   \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Rounds 6 + 7} & \darkcell{Rounds 8 + 9} & \darkcell{Round 10}\\
   \darkcell[1.4]{Easy}
