--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -22,13 +22,13 @@ This Scenario plays out over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svgunit{bronze} Units with the \textit{highest} Recruitment cost
-  \item A Pack of \svgunit{bronze} Units with the \textit{lowest} Recruitment cost
+  \item A Few \bronze\ Units with the \textit{highest} Recruitment cost
+  \item A Pack of \bronze\ Units with the \textit{lowest} Recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \svgunit{bronze} Dwelling
+  \item \bronze\ Dwelling
   \item Citadel
 \end{itemize}
 
