--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -44,7 +44,7 @@ At the start of the \nth{1} Round, each player may reshuffle their hand of Cards
 \subsection*{Tier V--VII Combat on Hard$+$\\Difficulty}
 
 Treat Level V--VII Combats as one difficulty step lower when playing on Hard or Impossible.
-For example, a Level VII Combat on Hard will be against 2 × \svgunit{azure} Neutral Units.
+For example, a Level VII Combat on Hard will be against 2 × \azure\ Neutral Units.
 
 {
   \hfill
